Add note on new methods and changes